<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sthomson.cs301.cs.wm.edu.amazebyseanthomson.ui.PlayActivity">

    <ToggleButton
        android:id="@+id/toggle_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_map_on"
        android:textOn="@string/toggle_map_off"
        android:textSize="10dp"
        android:onClick="toggleMap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toggle_solution"
        app:layout_constraintTop_toBottomOf="parent"/>

    <ToggleButton
        android:id="@+id/toggle_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_solution_on"
        android:textOn="@string/toggle_solution_off"
        android:textSize="10dp"
        android:onClick="toggleSolution"
        app:layout_constraintLeft_toRightOf="@id/toggle_map"
        app:layout_constraintRight_toLeftOf="@id/toggle_walls"
        app:layout_constraintTop_toBottomOf="parent"/>

    <ToggleButton
        android:id="@+id/toggle_walls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_walls_on"
        android:textOn="@string/toggle_walls_off"
        android:textSize="10dp"
        android:onClick="toggleWalls"
        app:layout_constraintLeft_toRightOf="@id/toggle_solution"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/energy_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="3000"
        android:progress="3000"
        android:minWidth="150dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/remaining_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy"
        android:textSize="10dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@id/energy_bar"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/right_arrow"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@mipmap/ic_chevron_right_black_24dp"
        android:onClick="moveManual"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/up_arrow"
        app:layout_constraintTop_toBottomOf="@id/up_arrow" />

    <Button
        android:id="@+id/left_arrow"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@mipmap/ic_chevron_left_black_24dp"
        android:onClick="moveManual"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@id/up_arrow"
        app:layout_constraintTop_toBottomOf="@id/up_arrow" />

    <Button
        android:id="@+id/up_arrow"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@mipmap/ic_expand_less_black_24dp"
        android:onClick="moveManual"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maze" />

    <ToggleButton
        android:id="@+id/explore_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="ToggleButton"
        android:textOff="@string/start_explore"
        android:textOn="@string/pause_explore"
        android:textSize="10dp"
        android:visibility="invisible"
        android:onClick="toggleExploration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <falstad.MazePanel
        android:id="@+id/maze"
        android:layout_width="450dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/toggle_map"/>

</android.support.constraint.ConstraintLayout>
