<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sthomson.cs301.cs.wm.edu.amazebyseanthomson.ui.FinishActivity">

    <TextView
        android:id="@+id/win_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <TextView
        android:id="@+id/lose_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_lose"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <TextView
        android:id="@+id/energy_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy_left"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lose_message"/>

    <TextView
        android:id="@+id/path_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:layout_marginLeft="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/energy_consumption"/>

    <TextView
        android:id="@+id/energy_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@id/energy_consumption"
        app:layout_constraintTop_toBottomOf="@id/lose_message"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/path_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/energy_num"
        app:layout_constraintLeft_toRightOf="@id/path_length" />

    <TextView
        android:id="@+id/finish_instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_instr"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lose_message"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_instr_cont"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finish_instr"/>


</android.support.constraint.ConstraintLayout>
